# aioselectel_api

./: .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py  testing.py
.github/workflows/: Testing and creating Tag.yml  Testing.yml  bump_version.yml  publish-poetry.yml  pylint.yml  python-publish-with-pip.yml  python-publish.yml
aioselectel_api/: __init__.py  base_client.py  client.py  exceptions.py
tests/: test_auth.py  test_client.py
